[package]
name = "giveaway_addon"
version = "0.1.0"
edition = "2021"
authors = ["Seres <haarlaurent67@hotmail.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
once_cell = "1.17.0"
rand = "0.8.4"

[dependencies.arcdps]
git = "https://github.com/zerthox/arcdps-bindings"
features = ["extras", "log"]

[lib]
crate-type = ["cdylib"]